# whoami

./: .env.example  .gitignore  AGENTS.md  README.md  TODO.md  docker-compose.yml  portfolio_with_rails_+_go_tui_08c11565.plan copy.md  portfolio_with_rails_+_go_tui_08c11565.plan.md
.github/workflows/: ci.yml
api/: .gitignore  Dockerfile  Gemfile  docker-compose.yml  init.sql
api/app/blueprints/: post_blueprint.rb
api/config/: boot.rb  credentials.yml.enc  database.yml  deploy.yml  routes.rb
api/content/: resume.md  resume.yaml
api/db/: schema.rb  seeds.rb
api/lib/: reading_time.rb
docs/: manual-deploy.md
tui/: Cargo.toml  Dockerfile  README.md  app.go  content.json  go.mod  go.sum  page.go  server.go  whoami
tui/internal/api/: client.go
tui/src/: app.rs  content.rs  keymap.rs  lib.rs  main.rs  model.rs  msg.rs  runtime.rs  styles.rs  ui.rs  view.rs
tui/src/components/: blog.rs  contact.rs  home.rs  loading.rs  mod.rs  projects.rs  resume.rs
tui/src/views/: blog.rs  contact.rs  home.rs  mod.rs  projects.rs  resume.rs
tui/src/widgets/: code_block.rs  loading.rs  markdown.rs  mod.rs  page_layout.rs  selectable_item.rs  tag_list.rs  text_input.rs  text_wrap.rs  typewriter.rs
web/: .dockerignore  .env  .gitignore  Dockerfile  drizzle.config.ts  index.html  package-lock.json  package.json  railway.toml  tsconfig.json  tsconfig.server.build.json  tsconfig.server.json  tsconfig.server.tsbuildinfo  vite.config.ts
web/server/: api.ts  index.ts
web/src/: App.tsx  consts.ts  index.css  index.tsx  main.tsx  theme.ts  vite-env.d.ts
(+216 files in other folders)
