[package]
name = "whoami-tui"
version = "0.1.0"
edition = "2024"
authors = ["Michael Magin"]
description = "A terminal-based portfolio viewer built with Ratatui"

[dependencies]
tuirealm = { version = "3", features = ["derive", "crossterm"] }
ratatui = "0.29"
crossterm = "0.28"
termimad = "0.31"
unicode-width = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19"
anyhow = "1.0"
tokio = { version = "1.42", features = ["full"] }
russh = "0.52"
rand = "0.8"

[[bin]]
name = "tui"
path = "src/main.rs"

[[bin]]
name = "ssh-server"
path = "src/bin/ssh_server.rs"
